# filters-iso

./: .travis.yml  README.rst  pyproject.toml  setup.py
.github/workflows/: build.yml
filters_iso/: __init__.py  iso.py
test/: filters_iso_test.py  test_filters_iso.py
